Fixed bug where filling the transfers div with torrent components was not overflowing properly

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -107,7 +107,7 @@ body {
 .transfers {
     overflow-y: auto;
     width: auto;
-    max-height: 100vh;
+    height: 480px;
 }
 
 /* Torrent Component */
